<resources>
    <string name="firebase_path" translatable="false">locations</string>

    <string name="app_name">VJIT ECE</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Phone No.</string>
    <string name="hint_otp">enter OTP</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member ? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password ?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password ?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Messages</string>
    <string name="title_notifications">Profile</string>
    <string name="quot">An investment in knowledge always pays the best interest.</string>
    <string name="about_us">About Us</string>
    <string name="todo">TODO</string>
    <string name="exam_hall_allotment">Exam Hall Allotment</string>
    <string name="buses_location">Buses Location</string>
    <string name="contact_us">Contact Us</string>
    <string name="class_group">Class Group</string>
    <string name="attendance">Attendance</string>
    <string name="study_material">Study Material</string>
    <string name="home">Home</string>
    <string name="exam_dates">Exam Dates</string>
    <string name="fee_payment">Fee Payment</string>
    <string name="login_portal">Login Portal</string>
    <string name="time_table">Time Table</string>
    <string name="circular">Circular</string>
    <string name="syllabi">Syllabi</string>
    <string name="feed">Feed</string>
    <string name="web_page">Web Page</string>
    <string name="welcome_to_vjit_ece">Welcome to VJIT ECE</string>
</resources>
