<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#B9F8F4"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".register">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            app:cardCornerRadius="10dp">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="Full Name"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:id="@+id/roll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="Roll NO."
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="Phone NO."
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:text="Year"
                        android:focusable="false"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry">
                    </TextView>
                    <Spinner
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="@font/helvetica"
                        android:padding="10dp"
                        android:popupBackground="#F6FAFA"
                        android:id="@+id/year"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edittextbg"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry">

                    </Spinner>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica"
                        android:text="Section"
                        android:focusable="false"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry">
                    </TextView>
                    <Spinner
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="@font/helvetica"
                        android:padding="10dp"
                        android:popupBackground="#F6FAFA"
                        android:id="@+id/section"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edittextbg"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry">

                    </Spinner>
                </LinearLayout>

                <Button

                    android:fontFamily="@font/helvetica"
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btnbackground"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


                <!-- Link to Login Screen -->

                <Button
                    android:fontFamily="@font/helvetica"
                    android:id="@+id/sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="#020202"
                    android:textSize="15dp" />
            </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>